# qwen-asr2api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
asr2api/: __init__.py
docs/plans/: 2026-03-01-asr-connection-resilience.md
llmdoc/: index.md
llmdoc/architecture/: system-map.md
llmdoc/guides/: common-workflows.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: conventions.md
tests/: test_transcriptions.py
